# cpp_basics

v10_conditions_branching/helloworld/src/: main.cpp
v11_loops/helloworld/src/: main.cpp
v12_control_flow/helloworld/: CMakeLists.txt
v12_control_flow/helloworld/headers/: Log.h
v12_control_flow/helloworld/src/: main.cpp
v13_pointers/helloworld/src/: main.cpp
v14_references/helloworld/src/: main.cpp
v15_classes/helloworld/src/: log.cpp  main.cpp
v16_structs/helloworld/src/: main.cpp
v17_writting_classes/helloworld/src/: main.cpp
v18_static/helloworld/: CMakeLists.txt
v18_static/helloworld/src/: Static.cpp  main.cpp
v19_static_classes/helloworld/: CMakeLists.txt
v19_static_classes/helloworld/src/: main.cpp
v1_intro/: notes
v20_enums/helloworld/src/: main.cpp
v21_constructors_destructors/helloworld/src/: main.cpp
v22_Inheritance/helloworld/src/: main.cpp
v23_virtual_functions/helloworld/src/: main.cpp
v24_interfaces_pure_virtual_functions/helloworld/src/: main.cpp
v25_visibility/helloworld/src/: main.cpp
v26_arrays/helloworld/: CMakeLists.txt
v26_arrays/helloworld/src/: main.cpp
v27_multidimarrays/helloworld/src/: main.cpp
v28_stack_heap/helloworld/src/: main.cpp
v29_new/helloworld/: CMakeLists.txt
v29_new/helloworld/src/: main.cpp
v2_setup_cmake/dev/: notes
v2_setup_cmake/dev/helloworld_2/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  (+2 more)
v30_lifetime/helloworld/: CMakeLists.txt
v39_macros/helloworld/: CMakeLists.txt
v3_how_it_works/helloworld/: CMakeLists.txt
v7_functions/helloworld/: CMakeLists.txt
(+30 files in other folders)
